v4.0 (May/2024):
- Unify scripts into one: sippts
- bug fixes
- Deleted script sipfuzzer
- added param -cve in scan script to show possible CVEs
- added param -up for update scripts and cve file

v3.4 (Feb/2024):
- added param -ppi for P-Preferred-Identity
- added param -pai for P-Asserted-Identity
- sipsend:
  - added param --local_port to force local port
  - added param --no_contact to send message without contact header
- sipinvite: added param --local_port to force local port
- sipexten:
  - added param -ofile to save results
  - added param -f to filter response code
- sipsend:
  - added param -header to insert custom headers
- global:
  - bug fixes
- Renamed script sipdump to sippcapdump
- Renamed script sipcrack to sipdigestcrack

v3.3 (Nov/2022):
- sipflood:
  - added param -th to allow threads
  - added params -b -a -min -max to create malformed headers
- sipscan:
  - manage large ranges of IP networks. Fixed memory leak problems
  - can now run faster. Supports 800 threads without memory consumption
  - added param -random to randomize target hosts
- sipdigestleak
  - now can attack several IP addresses or network ranges
  - added param -ping to ping the host and connect to them only if it is alive
  - added param --file lo load IPs from a file, with format (ip:port/proto)
- sipenumerate:
  - use threads to run faster
  - show fingerprinting to give more information
- sipping:
  - new module to check if a server/device is alive
- rtpbleedinject:
  - new module to inject RTP frames when RTPBleed vulnerability is present
- wssend:
  - new module to send SIP messages over WebSockets
- sipfuzzer:
  - new module to perform a SIP fuzzing test on several SIP methods
- global:
  - bug fixes

v3.2 (Sep/2022)
- sipsend:
  - added params from_tag, to_tag, branch, callid, cseq, sdp
  - added params user and pass to send a second message with auth if we obtain a code 401/407
  - added param --sdes to send cipher keys in SDP